--- a/jupyter/Aula 3 - Variáveis aleatórias.ipynb
+++ b/jupyter/Aula 3 - Variáveis aleatórias.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Variáveis-aleatórias-discretas\" data-toc-modified-id=\"Variáveis-aleatórias-discretas-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Variáveis aleatórias discretas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Variável-aleatória-com-distribuição-de-Bernoulli\" data-toc-modified-id=\"Variável-aleatória-com-distribuição-de-Bernoulli-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Variável aleatória com distribuição de Bernoulli</a></span></li><li><span><a href=\"#Variável-aleatória-com-distribuição-de-Binomial\" data-toc-modified-id=\"Variável-aleatória-com-distribuição-de-Binomial-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Variável aleatória com distribuição de Binomial</a></span></li></ul></li><li><span><a href=\"#Variáveis-aleatórias-contínuas\" data-toc-modified-id=\"Variáveis-aleatórias-contínuas-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Variáveis aleatórias contínuas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Variável-aleatória-com-distribuição-uniforme\" data-toc-modified-id=\"Variável-aleatória-com-distribuição-uniforme-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Variável aleatória com distribuição uniforme</a></span></li><li><span><a href=\"#Variável-aleatória-com-distribuição-de-Laplace\" data-toc-modified-id=\"Variável-aleatória-com-distribuição-de-Laplace-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Variável aleatória com distribuição de Laplace</a></span></li><li><span><a href=\"#Variável-aleatória-com-distribuição-gaussiana\" data-toc-modified-id=\"Variável-aleatória-com-distribuição-gaussiana-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Variável aleatória com distribuição gaussiana</a></span></li><li><span><a href=\"#Calculando-probabilidades\" data-toc-modified-id=\"Calculando-probabilidades-2.4\"><span class=\"toc-item-num\">2.4&nbsp;&nbsp;</span>Calculando probabilidades</a></span></li></ul></li></ul></div>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -52,6 +42,23 @@
     "}\n",
     "</style>\n",
     "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Revisão de variáveis aleatórias"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Sumário<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Variáveis-aleatórias-discretas\" data-toc-modified-id=\"Variáveis-aleatórias-discretas-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Variáveis aleatórias discretas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Variável-aleatória-com-distribuição-de-Bernoulli\" data-toc-modified-id=\"Variável-aleatória-com-distribuição-de-Bernoulli-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Variável aleatória com distribuição de Bernoulli</a></span></li><li><span><a href=\"#Variável-aleatória-com-distribuição-de-Binomial\" data-toc-modified-id=\"Variável-aleatória-com-distribuição-de-Binomial-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Variável aleatória com distribuição de Binomial</a></span></li></ul></li><li><span><a href=\"#Variáveis-aleatórias-contínuas\" data-toc-modified-id=\"Variáveis-aleatórias-contínuas-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Variáveis aleatórias contínuas</a></span><ul class=\"toc-item\"><li><span><a href=\"#Variável-aleatória-com-distribuição-uniforme\" data-toc-modified-id=\"Variável-aleatória-com-distribuição-uniforme-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Variável aleatória com distribuição uniforme</a></span></li><li><span><a href=\"#Variável-aleatória-com-distribuição-de-Laplace\" data-toc-modified-id=\"Variável-aleatória-com-distribuição-de-Laplace-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Variável aleatória com distribuição de Laplace</a></span></li><li><span><a href=\"#Variável-aleatória-com-distribuição-gaussiana\" data-toc-modified-id=\"Variável-aleatória-com-distribuição-gaussiana-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Variável aleatória com distribuição gaussiana</a></span></li><li><span><a href=\"#Calculando-probabilidades\" data-toc-modified-id=\"Calculando-probabilidades-2.4\"><span class=\"toc-item-num\">2.4&nbsp;&nbsp;</span>Calculando probabilidades</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -764,12 +771,12 @@
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": true,
-   "title_cell": "Table of Contents",
+   "title_cell": "Sumário",
    "title_sidebar": "Contents",
    "toc_cell": true,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
