--- a/jupyter/Modulação de onda contínua.ipynb
+++ b/jupyter/Modulação de onda contínua.ipynb
@@ -546,7 +546,7 @@
     "$$\n",
     "\\begin{align}\n",
     "\\bar{R}_{Y}(\\tau) &= \\frac{1}{T_{c}} \\int_{-T_{c} / 2}^{T_{c} / 2} R_{Y}(t+\\tau, t) dt\\nonumber\\\\\n",
-    "&= \\frac{A^2}{4}R_M(\\tau)\\cos(2\\pi f_c \\tau) \\pm \\frac{A^2}{4}R_{M\\hat{M}}(\\tau)\\operatorname{sen}(2\\pi f_c \\tau) \\\\&\\mp \\frac{A^2}{4}R_{\\hat{M}M}(\\tau)\\operatorname{sen}(2\\pi f_c \\tau) + \\frac{A^2}{4}R_{\\hat{M}}(\\tau)\\cos(2\\pi f_c \\tau)\\nonumber\n",
+    "&= \\frac{A^2}{4}R_M(\\tau)\\cos(2\\pi f_c \\tau) \\pm \\frac{A^2}{4}R_{\\hat{M}M}(\\tau)\\operatorname{sen}(2\\pi f_c \\tau) \\\\&\\mp \\frac{A^2}{4}R_{M\\hat{M}}(\\tau)\\operatorname{sen}(2\\pi f_c \\tau) + \\frac{A^2}{4}R_{\\hat{M}}(\\tau)\\cos(2\\pi f_c \\tau)\\nonumber\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
@@ -561,7 +561,7 @@
     "\n",
     "$$\n",
     "\\begin{equation}\n",
-    "\\bar{R}_{Y}(\\tau) = \\frac{A^{2}}{2} R_{M}(\\tau)\\cos \\left(2 \\pi f_{c} \\tau\\right) \\pm \\frac{A^{2}}{2}R_{M \\hat{M}}(\\tau) \\operatorname{sen}\\left(2 \\pi f_{c} \\tau\\right).\n",
+    "\\bar{R}_{Y}(\\tau) = \\frac{A^{2}}{2} R_{M}(\\tau)\\cos \\left(2 \\pi f_{c} \\tau\\right) \\pm \\frac{A^{2}}{2}R_{\\hat{M} M}(\\tau) \\operatorname{sen}\\left(2 \\pi f_{c} \\tau\\right).\n",
     "\\end{equation}\n",
     "$$\n",
     "\n",
@@ -570,10 +570,10 @@
     "$$\n",
     "\\begin{align}\n",
     "S_{Y}(f) &= \\mathscr{F}[\\bar{R}_{Y}(\\tau)]\\nonumber\\\\\n",
-    "&= \\mathscr{F}\\left[\\frac{A^{2}}{2} R_{M}(\\tau)\\cos \\left(2 \\pi f_{c} \\tau\\right) \\pm \\frac{A^{2}}{2}R_{M \\hat{M}}(\\tau) \\operatorname{sen}\\left(2 \\pi f_{c} \\tau\\right)\\right] \\nonumber\\\\\n",
-    "&= \\frac{A^2}{2}\\mathscr{F}\\left[R_M(\\tau)\\right]\\ast \\mathscr{F}\\left[\\cos(2\\pi f_c \\tau)\\right] \\pm \\frac{A^2}{2}\\mathscr{F}\\left[R_{M \\hat{M}}(\\tau)\\right]\\ast \\mathscr{F}\\left[\\operatorname{sen}(2\\pi f_c \\tau)\\right] \\nonumber\\\\\n",
-    "&= \\frac{A^2}{2}S_M(f)\\ast \\frac{1}{2}\\left[\\delta(f-f_c)+\\delta(f+f_c)\\right] \\pm \\frac{A^2}{2}S_{M \\hat{M}}(f)\\ast \\frac{1}{2j}\\left[\\delta(f-f_c)-\\delta(f+f_c)\\right]. \\nonumber\\\\\n",
-    "&= \\frac{A^2}{4}\\left[S_M(f-f_c)+S_M(f+f_c)\\right] \\pm \\frac{A^2}{4j}\\left[S_{M \\hat{M}}(f-f_c)-S_{M \\hat{M}}(f+f_c)\\right]. \\nonumber\n",
+    "&= \\mathscr{F}\\left[\\frac{A^{2}}{2} R_{M}(\\tau)\\cos \\left(2 \\pi f_{c} \\tau\\right) \\pm \\frac{A^{2}}{2}R_{\\hat{M}M}(\\tau) \\operatorname{sen}\\left(2 \\pi f_{c} \\tau\\right)\\right] \\nonumber\\\\\n",
+    "&= \\frac{A^2}{2}\\mathscr{F}\\left[R_M(\\tau)\\right]\\ast \\mathscr{F}\\left[\\cos(2\\pi f_c \\tau)\\right] \\pm \\frac{A^2}{2}\\mathscr{F}\\left[R_{\\hat{M}M}(\\tau)\\right]\\ast \\mathscr{F}\\left[\\operatorname{sen}(2\\pi f_c \\tau)\\right] \\nonumber\\\\\n",
+    "&= \\frac{A^2}{2}S_M(f)\\ast \\frac{1}{2}\\left[\\delta(f-f_c)+\\delta(f+f_c)\\right] \\pm \\frac{A^2}{2}S_{\\hat{M} M}(f)\\ast \\frac{1}{2j}\\left[\\delta(f-f_c)-\\delta(f+f_c)\\right]. \\nonumber\\\\\n",
+    "&= \\frac{A^2}{4}\\left[S_M(f-f_c)+S_M(f+f_c)\\right] \\pm \\frac{A^2}{4j}\\left[S_{\\hat{M} M}(f-f_c)-S_{\\hat{M} M}(f+f_c)\\right]. \\nonumber\n",
     "\\end{align}\n",
     "$$"
    ]
@@ -586,9 +586,9 @@
     "\n",
     "$$\n",
     "\\begin{aligned} \n",
-    "&S_{M \\hat{M}}(f) =-j[u(-f)-u(f)] S_{M}(f) \\\\ \n",
-    "&S_{M \\hat{M}}\\left(f-f_{c}\\right) =-j\\left[u(-f+f_c)-u\\left(f-f_{c}\\right)\\right] S_{M}\\left(f-f_{c}\\right) \\\\ \n",
-    "&S_{M \\hat{M}}\\left(f+f_{c}\\right) =-j\\left[u(-f-f_c)-u\\left(f+f_{c}\\right)\\right] S_{M}\\left(f+f_{c}\\right) \n",
+    "&S_{\\hat{M} M}(f) = j[u(-f)-u(f)] S_{M}(f) \\\\ \n",
+    "&S_{\\hat{M} M}\\left(f-f_{c}\\right) = j\\left[u(-f+f_c)-u\\left(f-f_{c}\\right)\\right] S_{M}\\left(f-f_{c}\\right) \\\\ \n",
+    "&S_{\\hat{M} M}\\left(f+f_{c}\\right) = j\\left[u(-f-f_c)-u\\left(f+f_{c}\\right)\\right] S_{M}\\left(f+f_{c}\\right) \n",
     "\\end{aligned}\n",
     "$$\n",
     "\n",
@@ -613,10 +613,10 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "S_{Y}(f) &= \\frac{A^2}{4}\\left[S_M(f-f_c)+S_M(f+f_c)\\right] \n",
-    "+ \\frac{A^2}{4j}\\left[S_{M \\hat{M}}(f-f_c)-S_{M \\hat{M}}(f+f_c)\\right]. \\nonumber \\\\\n",
-    "&= \\frac{A^2}{4}\\left[u\\left(f-f_{c}\\right)S_{M}\\left(f-f_{c}\\right)+u\\left(-f+f_{c}\\right)S_{M}\\left(f-f_{c}\\right)+u\\left(f+f_{c}\\right) S_{M}\\left(f+f_{c}\\right)+u\\left(-f-f_{c}\\right) S_{M}\\left(f+f_{c}\\right)\\right]. \\nonumber \\\\\n",
-    "&+ \\frac{A^2}{4}\\left[-u(-f+f_c)S_{M}\\left(f-f_{c}\\right)+u\\left(f-f_{c}\\right)S_{M}\\left(f-f_{c}\\right)+u(-f-f_c)S_{M}\\left(f+f_{c}\\right)-u\\left(f+f_{c}\\right)S_{M}\\left(f+f_{c}\\right)\\right]. \\nonumber \\\\\n",
+    "S_{Y}(f) &= \\frac{A^2}{4}\\left[S_M(f-f_c)+S_M(f+f_c)\\right] - \\frac{A^2}{4j}\\left[S_{\\hat{M} M}(f-f_c)-S_{\\hat{M} M}(f+f_c)\\right]. \\nonumber \\\\\n",
+    "&= \\frac{A^2}{4}\\left[S_{M}\\left(f-f_{c}\\right) +S_{M}\\left(f+f_{c}\\right)\\right] \\nonumber \\\\\n",
+    "&- \\frac{A^2}{4}\\left[u(-f+f_c)S_{M}\\left(f-f_{c}\\right)-u\\left(f-f_{c}\\right)S_{M}\\left(f-f_{c}\\right)-u(-f-f_c)S_{M}\\left(f+f_{c}\\right)+u\\left(f+f_{c}\\right)S_{M}\\left(f+f_{c}\\right)\\right]. \\nonumber \\\\\n",
+    "&= \\frac{A^2}{4}S_{M}\\left(f-f_{c}\\right)\\left[1 - u\\left(-f+f_{c}\\right) + u\\left(f-f_{c}\\right) \\right] +\\frac{A^2}{4} S_{M}\\left(f+f_{c}\\right)\\left[1 + u\\left(-f-f_{c}\\right) - u\\left(f+f_{c}\\right) \\right]. \\nonumber \\\\\n",
     "&= \\frac{A^2}{2}\\left[u\\left(f-f_{c}\\right)S_{M}\\left(f-f_{c}\\right) +u\\left(-f-f_{c}\\right)S_{M}\\left(f+f_{c}\\right)\\right]. \\nonumber \\\\\n",
     "\\end{align}\n",
     "$$"
@@ -632,9 +632,10 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "S_{Y}(f) &= \\frac{A^2}{4}\\left[S_M(f-f_c)+S_M(f+f_c)\\right] - \\frac{A^2}{4j}\\left[S_{M \\hat{M}}(f-f_c)-S_{M \\hat{M}}(f+f_c)\\right]. \\nonumber \\\\\n",
-    "&= \\frac{A^2}{4}\\left[u\\left(f-f_{c}\\right)S_{M}\\left(f-f_{c}\\right) + u\\left(-f+f_{c}\\right)S_{M}\\left(f-f_{c}\\right)+u\\left(f+f_{c}\\right)S_{M}\\left(f+f_{c}\\right)+u\\left(-f-f_{c}\\right)S_{M}\\left(f+f_{c}\\right)\\right]. \\nonumber \\\\\n",
-    "&- \\frac{A^2}{4}\\left[-u(-f+f_c)S_{M}\\left(f-f_{c}\\right)+u\\left(f-f_{c}\\right)S_{M}\\left(f-f_{c}\\right)+u(-f-f_c)S_{M}\\left(f+f_{c}\\right)-u\\left(f+f_{c}\\right)S_{M}\\left(f+f_{c}\\right)\\right]. \\nonumber \\\\\n",
+    "S_{Y}(f) &= \\frac{A^2}{4}\\left[S_M(f-f_c)+S_M(f+f_c)\\right] + \\frac{A^2}{4j}\\left[S_{\\hat{M} M}(f-f_c)-S_{\\hat{M} M}(f+f_c)\\right]. \\nonumber \\\\\n",
+    "&= \\frac{A^2}{4}\\left[S_{M}\\left(f-f_{c}\\right) +S_{M}\\left(f+f_{c}\\right)\\right] \\nonumber \\\\\n",
+    "&+ \\frac{A^2}{4}\\left[u(-f+f_c)S_{M}\\left(f-f_{c}\\right)-u\\left(f-f_{c}\\right)S_{M}\\left(f-f_{c}\\right)-u(-f-f_c)S_{M}\\left(f+f_{c}\\right)+u\\left(f+f_{c}\\right)S_{M}\\left(f+f_{c}\\right)\\right]. \\nonumber \\\\\n",
+    "&= \\frac{A^2}{4}S_{M}\\left(f-f_{c}\\right)\\left[1 + u\\left(-f+f_{c}\\right) - u\\left(f-f_{c}\\right) \\right] +\\frac{A^2}{4} S_{M}\\left(f+f_{c}\\right)\\left[1 - u\\left(-f-f_{c}\\right) + u\\left(f+f_{c}\\right) \\right]. \\nonumber \\\\\n",
     "&= \\frac{A^2}{2}\\left[u\\left(-f+f_{c}\\right)S_{M}\\left(f-f_{c}\\right) +u\\left(f+f_{c}\\right)S_{M}\\left(f+f_{c}\\right)\\right]. \\nonumber \\\\\n",
     "\\end{align}\n",
     "$$"
