--- a/jupyter/Ruído em sistemas de comunicações.ipynb
+++ b/jupyter/Ruído em sistemas de comunicações.ipynb
@@ -622,7 +622,7 @@
     "$$\n",
     "\\begin{align}\n",
     "E_r(t)&=\\sqrt{r_I^{2}(t)+r_Q^{2}(t)} \\nonumber\\\\\n",
-    "\\Theta_r(t)&=\\arctan -\\frac{r_Q(t)}{r_I(t)}.\\nonumber\n",
+    "\\Theta_r(t)&=\\arctan \\frac{r_Q(t)}{r_I(t)}.\\nonumber\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
@@ -730,14 +730,19 @@
     "\n",
     "em que $V_n(t)$ e $\\Phi_{n}(t)$ representam a amplitude e a fase da envoltória do ruído passa-faixa $n(t)$.\n",
     "\n",
-    "<img src=\"./figuras/FasoresRuidoSinaisPMFM.png?\" width=\"500\">\n",
-    "\n",
-    "Assumindo que a potência da portadora modulada é muito maior que a potência de ruído, ou seja, que $p\\left(V_{n}(t) \\ll A\\right) \\approx 1$, podemos escrever as seguintes aproximações para o sinal recebido\n",
+    "<img src=\"./figuras/FasoresRuidoSinaisPMFM.png?\" width=\"500\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assumindo que a potência da portadora modulada é muito maior que a potência de ruído, ou seja, que $p\\left(V_{n}(t) \\ll A\\right) \\approx 1$ e que $\\arctan (x)=x-\\frac{x^{3}}{3}+\\frac{x^{5}}{5}-\\frac{x^{7}}{7}+\\ldots$, podemos escrever as seguintes aproximações para o sinal recebido\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
     "r(t) &\\approx  \\left[A+V_{n}(t) \\cos \\alpha(t)\\right] \\cos \\left(2 \\pi f_{c} t+\\Phi_M(t)+\\arctan \\frac{V_{n}(t) \\sin \\alpha(t)}{A+V_{n}(t) \\cos \\alpha(t)}\\right) \\\\\n",
-    "& \\approx  \\left[A + V_{n}(t) \\cos \\alpha(t) \\right] \\cos \\left(2 \\pi f_{c} t+\\Phi_M(t)+\\frac{V_{n}(t)}{A} \\operatorname{sen} \\alpha(t)\\right)\n",
+    "& \\approx  A \\cos \\left(2 \\pi f_{c} t+\\Phi_M(t)+\\frac{V_{n}(t)}{A} \\operatorname{sen} \\alpha(t)\\right)\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
@@ -764,17 +769,27 @@
     "         &=\\frac{1}{A}\\left[V_{n}(t) \\sin \\Phi_{n}(t) \\cos \\Phi_M(t)-V_{n}(t) \\cos \\Phi_{n}(t) \\operatorname{sen} \\Phi_M(t)\\right] \\nonumber\\\\ \n",
     "         &=\\frac{1}{A}\\left[n_Q(t) \\cos \\Phi_M(t)-n_I(t) \\operatorname{sen} \\Phi_M(t)\\right] \\nonumber\n",
     "\\end{align}\n",
-    "$$\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Considerando que $R_{n_I}(\\tau)=R_{n_Q}(\\tau)$ e $R_{n_In_Q}(\\tau)=0$, a autocorrelação de $N(t)$ será dada por\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "E\\left[N(t+\\tau) N(t)\\right]=& \\frac{1}{A^{2}} E\\left[R_{n_Q}(\\tau) \\cos \\Phi_M(t) \\cos \\Phi_M(t+\\tau)+R_{n_I}(\\tau) \\operatorname{sen} \\Phi_M(t+\\tau) \\operatorname{sen} \\Phi_M(t)\\right] \\nonumber\\\\\n",
+    "E\\left[N(t+\\tau) N(t)\\right]=& \\frac{1}{A^{2}} R_{n_Q}(\\tau) E\\left[\\cos \\Phi_M(t) \\cos \\Phi_M(t+\\tau)\\right]+R_{n_I}(\\tau) E\\left[\\operatorname{sen} \\Phi_M(t+\\tau) \\operatorname{sen} \\Phi_M(t)\\right] \\nonumber\\\\\n",
     "                                    =& \\frac{1}{A^{2}} R_{n_I}(\\tau) E\\left\\{\\cos \\left[\\Phi_M(t+\\tau)-\\Phi_M(t)\\right]\\right\\}\n",
     "\\end{align}\n",
-    "$$\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Se assumirmos que a mensagem $M(t)$ é um processo estacionário gaussiano de média nula e função de autocorrelação denotada por $R_M(\\tau)$, também serão gaussianos os processos $\\Phi_M(t)$, tanto no caso do sinal PM quanto no caso do sinal FM. Logo, para qualquer instante $t$ a variável $U(t,\\tau) = \\Phi_M(t+\\tau)-\\Phi_M(t)$ é a diferença entre duas variáveis aleatórias gaussianas conjuntas. Logo, $U(t,\\tau)$ também será uma variável aleatória gaussiana com média nula e variância dada por \n",
     "\n",
     "$$\n",
@@ -854,11 +869,16 @@
     "A potência de sinal na saída do demodulador, por sua vez, será dada por\n",
     "$$\n",
     "P_s = \\begin{cases}k_{p}^{2} P_{M}, & \\text { PM } \\\\ k_{f}^{2} P_{M}, & \\text { FM. }\\end{cases}\n",
-    "$$\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Por fim, obtemos a $\\mathrm{SNR}$ do sinal demodulado\n",
     "\n",
-    "$$\\large\n",
+    "$$\n",
     "\\mathrm{SNR} = \\begin{cases}\\frac{k_{p}^{2} A^{2} P_{M}}{2N_{0}B}, & \\text { PM } \\\\ \\frac{3k_{f}^{2} A^{2} P_{M}}{2N_{0}B^3}, & \\text { FM. }\\end{cases}\n",
     "$$\n",
     "\n",
