Update Controle de perdas em sistemas de comunicações.ipynb

--- a/jupyter/Controle de perdas em sistemas de comunicações.ipynb
+++ b/jupyter/Controle de perdas em sistemas de comunicações.ipynb
@@ -253,9 +253,9 @@
    "source": [
     "## O enlace sem fio simplificado\n",
     "\n",
-    "O canal de propagação sem fio mais simples é aquele que contempla um único percurso de propagação do sinal entre o transmissor e o receptor, sem que hajam outros fenômenos ondulatórios, tais como reflexão ou dispersão, afetando o sinal que alcança pelo receptor. Este tipo de enlace é comumente conhecido como enlace de visada direta.\n",
+    "O canal de propagação sem fio mais simples é aquele que contempla um único percurso de propagação do sinal entre o transmissor e o receptor, sem que hajam outros fenômenos ondulatórios, tais como reflexão ou dispersão, afetando o sinal que alcança o receptor. Este tipo de enlace é comumente conhecido como enlace de visada direta.\n",
     "\n",
-    "Uma vez transmitida, as ondas de rádio propagam-se pelo espaço livre, espalhando energia em diversas direções. Na análise do balanço de potência nesses sistemas é útil assumir-se um modelo ideal de antena transmissora omnidirecional em toda a energia irradiada parte de apenas um ponto. Esse modelo simplificado assume que a antena não tem direção preferencial, irradiando uniformemente em todas as direções. Nesse caso, seja $P_t$ a potência emitida pela antena em $W$, então a densidade de potência na distância $d$ metros é dada por\n",
+    "Uma vez transmitida, as ondas de rádio propagam-se pelo espaço livre, espalhando energia em diversas direções. Na análise do balanço de potência nesses sistemas é útil assumir-se um modelo ideal de antena transmissora omnidirecional em toda a energia irradiada parte de apenas um ponto. Esse modelo simplificado assume que a antena não tem direção preferencial, irradiando uniformemente em todas as direções. Nesse caso, seja $P_t$ a potência emitida pela antena em $W$, então a densidade espacial de potência na distância $d$ metros é dada por\n",
     "\n",
     "$$\n",
     "\\begin{equation}\\label{eq5}\n",
