Update Modulação de onda contínua.ipynb

--- a/jupyter/Modulação de onda contínua.ipynb
+++ b/jupyter/Modulação de onda contínua.ipynb
@@ -889,15 +889,15 @@
     "O sinal modulado $Y(t)$ é um processo cicloestacionário definido por com função de autocorrelação dada por\n",
     "\n",
     "$$\\begin{equation} \n",
-    "R_{Y}(t+\\tau, t) = E\\left[Y(t)Y(t+\\tau)\\right] \n",
+    "R_{Y}(t+\\tau, t) = E\\left[Y(t+\\tau)Y(t)\\right] \n",
     "\\end{equation}\n",
     "$$\n",
     "\n",
-    "Podemos expandir o produto $Y(t)Y(t+\\tau)$ na forma\n",
+    "Podemos expandir o produto $Y(t+\\tau)Y(t)$ na forma\n",
     "\n",
     "$$\n",
     "\\begin{align} \n",
-    "Y(t)Y(t+\\tau) &= A^{2}\\cos \\left(2 \\pi f_{c} t\\right)\\cos \\left(2 \\pi f_{c} t + 2 \\pi f_{c} \\tau\\right)\\nonumber\\\\\n",
+    "Y(t+\\tau)Y(t) &= A^{2}\\cos \\left(2 \\pi f_{c} t\\right)\\cos \\left(2 \\pi f_{c} t + 2 \\pi f_{c} \\tau\\right)\\nonumber\\\\\n",
     "              &- A^{2}\\operatorname{sen} \\left(2 \\pi f_{c} t\\right)\\cos \\left(2 \\pi f_{c} t + 2 \\pi f_{c} \\tau\\right)\\Theta(t)\\nonumber\\\\\n",
     "              &- A^{2}\\cos \\left(2 \\pi f_{c} t\\right)\\operatorname{sen} \\left(2 \\pi f_{c} t + 2 \\pi f_{c} \\tau\\right)\\Theta(t+\\tau)\\nonumber\\\\\n",
     "              &+ A^{2}\\operatorname{sen} \\left(2 \\pi f_{c} t\\right)\\operatorname{sen} \\left(2 \\pi f_{c} t + 2 \\pi f_{c} \\tau\\right)\\Theta(t)\\Theta(t+\\tau)\\nonumber\\\\\n",
@@ -907,7 +907,7 @@
     "\n",
     "$$\n",
     "\\begin{align} \n",
-    "E\\left[Y(t)Y(t+\\tau)\\right] &= A^{2}\\cos \\left(2 \\pi f_{c} t\\right)\\cos \\left(2 \\pi f_{c} t + 2 \\pi f_{c} \\tau\\right)\\nonumber\\\\\n",
+    "E\\left[Y(t+\\tau)Y(t)\\right] &= A^{2}\\cos \\left(2 \\pi f_{c} t\\right)\\cos \\left(2 \\pi f_{c} t + 2 \\pi f_{c} \\tau\\right)\\nonumber\\\\\n",
     "              &- A^{2}\\operatorname{sen} \\left(2 \\pi f_{c} t\\right)\\cos \\left(2 \\pi f_{c} t + 2 \\pi f_{c} \\tau\\right)E\\left[\\Theta(t)\\right]\\nonumber\\\\\n",
     "              &- A^{2}\\cos \\left(2 \\pi f_{c} t\\right)\\operatorname{sen} \\left(2 \\pi f_{c} t + 2 \\pi f_{c} \\tau\\right)E\\left[\\Theta(t+\\tau)\\right]\\nonumber\\\\\n",
     "              &+ A^{2}\\operatorname{sen} \\left(2 \\pi f_{c} t\\right)\\operatorname{sen} \\left(2 \\pi f_{c} t + 2 \\pi f_{c} \\tau\\right)E\\left[\\Theta(t)\\Theta(t+\\tau)\\right]\\nonumber\\\\\n",
